feat: enhance production robustness, AST sandbox rule, full type conversion, and configurable LiveLogger